--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "@types/react-resizable": "^3.0.8",
     "@types/youtube": "^0.1.0",
     "antd": "^5.20.6",
     "get-youtube-id": "^1.0.1",
@@ -25,7 +26,8 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
-    "react-player": "^2.16.0"
+    "react-player": "^2.16.0",
+    "react-resizable": "^3.0.5"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.2",
