--- a/biome.json
+++ b/biome.json
@@ -9,7 +9,8 @@
         "noVar": "error",
         "useImportType": "off",
         "useSelfClosingElements": "warn",
-        "noUnusedTemplateLiteral": "warn"
+        "noUnusedTemplateLiteral": "warn",
+        "useConst": "warn"
       },
       "suspicious": {
         "noEmptyInterface": "off",
@@ -18,6 +19,9 @@
       },
       "complexity": {
         "noBannedTypes": "off"
+      },
+      "correctness": {
+        "useExhaustiveDependencies": "warn"
       }
     }
   },
@@ -25,6 +29,7 @@
     "enabled": true,
     "indentWidth": 2,
     "lineWidth": 90,
-    "useEditorconfig": true
+    "useEditorconfig": true,
+    "include": [ "src/**/*.tsx", "src/**/*.ts" ]
   }
 }
