--- a/biome.json
+++ b/biome.json
@@ -22,6 +22,10 @@
       },
       "correctness": {
         "useExhaustiveDependencies": "warn"
+      },
+      "a11y": {
+        "useButtonType": "warn",
+        "useKeyWithClickEvents": "off"
       }
     }
   },
