--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-player": "^2.16.0",
-    "react-resizable": "^3.0.5"
+    "react-resizable": "^3.0.5",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.2",
@@ -37,6 +38,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint-config-next": "14.2.13",
