fix(src): notes style change
notes style change

--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,8 @@
       },
       "a11y": {
         "useButtonType": "warn",
-        "useKeyWithClickEvents": "off"
+        "useKeyWithClickEvents": "off",
+        "noSvgWithoutTitle": "warn"
       }
     }
   },
