--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "open http://localhost:3000 && next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "biome lint --apply .",
@@ -18,7 +18,6 @@
     "@mui/material": "^6.1.1",
     "@radix-ui/react-context-menu": "^2.2.1",
     "@radix-ui/react-dialog": "^1.1.1",
-    "@types/react-resizable": "^3.0.8",
     "@types/youtube": "^0.1.0",
     "antd": "^5.20.6",
     "get-youtube-id": "^1.0.1",
@@ -27,9 +26,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
-    "react-player": "^2.16.0",
-    "react-resizable": "^3.0.5",
-    "react-scroll": "^1.9.0"
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.2",
