--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-context-menu": "^2.2.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@types/youtube": "^0.1.0",
+    "@vercel/analytics": "^1.3.1",
     "antd": "^5.20.6",
     "get-youtube-id": "^1.0.1",
     "next": "14.2.13",
