--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,7 @@
     "rules": {
       "recommended": true,
       "style": {
-        "noVar": "error",
+        "noVar": "warn",
         "useImportType": "off",
         "useSelfClosingElements": "warn",
         "noUnusedTemplateLiteral": "warn",
